src/app/web/src/main/webapp/assets/css/homepage.css
.form-inline {
    display: flex;
    align-items: center;
    width: 100%;
}

.form-inline .form-control {
    flex-grow: 1;
}

.form-inline button {
    white-space: nowrap;
}

@media (min-width: 576px) {
    .form-inline input[type="text"] {
        max-width: none;
    }
}

.aspect-ratio-box {
    width: 100%;
    padding-top: 56.25%;
    position: relative;
}

.aspect-ratio-box img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: auto;
}

.btn-add {
    display: block;
    width: 100%;
    padding-bottom: 56.25%;
    font-size: 4em;
    color: #007bff;
    line-height: 0;
    border-radius: 0.25rem;
}

.card-img-top-wrapper {
    position: relative;
    width: 100%;
    padding-bottom: 56.25%;
}

.card-img-top-wrapper img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: contain;
}

.card-img-top-wrapper .btn-danger {
    position: absolute;
    top: 0;
    right: 0;
    transform: none;
}

.card .btn-danger {
    margin-right: 0.5rem;
    margin-top: 0.25rem;
}

.cart-img-top {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.delete-whiteboard-button {
    position: absolute;
    top: 0;
    right: 0;
}

